--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,13 @@
 [package]
-name = "tree-sitter-python"
-description = "Python grammar for tree-sitter"
+name = "tree-sitter-coconut"
+description = "Coconut grammar for tree-sitter"
 version = "0.23.2"
 authors = [
-  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
-  "Amaan Qureshi <amaanq12@gmail.com>",
 ]
 license = "MIT"
-keywords = ["incremental", "parsing", "tree-sitter", "python"]
+keywords = ["incremental", "parsing", "tree-sitter", "python", "coconut"]
 categories = ["parsing", "text-editors"]
-repository = "https://github.com/tree-sitter/tree-sitter-python"
+repository = "https://github.com/aidanmontare-fed/tree-sitter-coconut"
 edition = "2021"
 autoexamples = false
 
