--- a/bindings/c/tree-sitter-coconut.pc.in
+++ b/bindings/c/tree-sitter-coconut.pc.in
@@ -2,10 +2,10 @@ prefix=@PREFIX@
 libdir=@LIBDIR@
 includedir=@INCLUDEDIR@
 
-Name: tree-sitter-python
-Description: python grammar for tree-sitter
+Name: tree-sitter-coconut
+Description: coconut grammar for tree-sitter
 URL: @URL@
 Version: @VERSION@
 Requires: @REQUIRES@
-Libs: -L${libdir} @ADDITIONAL_LIBS@ -ltree-sitter-python
+Libs: -L${libdir} @ADDITIONAL_LIBS@ -ltree-sitter-coconut
 Cflags: -I${includedir}
